--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 	<artifactId>mysql-connector-java</artifactId>
 	<version>5.1.34</version>
 </dependency>
+<dependency>
+	<groupId>commons-io</groupId>
+	<artifactId>commons-io</artifactId>
+	<version>2.4</version>
+</dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
