--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,27 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-jar-plugin</artifactId>
+	<version>2.4</version>
+	<configuration>
+	  <archive>
+	    <manifest>
+		<mainClass>com.mycompany.slavesupdate.Driver</mainClass>
+	    </manifest>
+	  </archive>
+	</configuration>
+    </plugin>
+            
+        </plugins>
+        
+    </build>
     
+    
+  
     
     <dependencies>
         <dependency>
@@ -31,4 +51,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    
+      
 </project>
