--- a/pom.xml
+++ b/pom.xml
@@ -12,18 +12,39 @@
     </properties>
     <build>
         <plugins>
-            <plugin>
+         <plugin>
 	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-jar-plugin</artifactId>
 	<version>2.4</version>
 	<configuration>
 	  <archive>
 	    <manifest>
+		<addClasspath>true</addClasspath>
 		<mainClass>com.mycompany.slavesupdate.Driver</mainClass>
+		<classpathPrefix>dependency-jars/</classpathPrefix>
 	    </manifest>
 	  </archive>
 	</configuration>
-    </plugin>
+  </plugin>
+  <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-dependency-plugin</artifactId>
+	<version>2.5.1</version>
+	<executions>
+	  <execution>
+		<id>copy-dependencies</id>
+		<phase>package</phase>
+		<goals>
+		    <goal>copy-dependencies</goal>
+		</goals>
+		<configuration>
+		    <outputDirectory>
+                          ${project.build.directory}/dependency-jars/
+                    </outputDirectory>
+		</configuration>
+	    </execution>
+	</executions>
+  </plugin>
             
         </plugins>
         
