--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	  <archive>
 	    <manifest>
 		<addClasspath>true</addClasspath>
-		<mainClass>com.mycompany.slavesupdate.Driver</mainClass>
+		<mainClass>edu.iit.driver</mainClass>
 		<classpathPrefix>dependency-jars/</classpathPrefix>
 	    </manifest>
 	  </archive>
